# google-drive-file-summary

./: .gitignore  README.md  terraformApplySteps.md  terraformDestroySteps.md
backend/: Backend.md  Dockerfile  README.md  credentials copy.json  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/auth/: google_oauth.py
backend/app/core/: config.py  rate_limit.py
backend/app/drive/: client.py
backend/app/readers/: docx.py  pdf.py  txt.py
backend/app/summarizer/: chunker.py  llm.py
backend/tests/: test_chunker.py  test_summarizer.py
frontend/: README.md  index.html  tsconfig.app.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: backend.ts
frontend/src/auth/: GoogleLoginBtn.tsx
frontend/src/drive/: FileList.tsx
frontend/src/summary/: SummaryView.tsx
infra/: acm.tf  alb.tf  backend.tf  cloudfront.tf  ecr.tf  ecs_cluster.tf  ecs_service.tf  ecs_task_definition.tf  iam.tf  main.tf  outputs.tf  provider.tf  s3.tf  s3_frontend.tf  secrets.tf  security.tf  terraform.tfvars  variables.tf  vpc.tf
infra/scripts/: apply.sh  destroy.sh
